--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  margin: 0;
+  min-height: 180px;
+  padding: 0;
+  width: 300px;
   display: flex;
   flex-direction: column;
+}
+
+h1 {
+  font-size: 18px;
+  font-weight: 100;
+  margin: 0;
+}
+
+h4 {
+  padding-top: 6px;
+}
+
+img {
+  width: 50px;
+}
+
+.modal-header {
+  border-bottom: 0.5px solid #dadada;
+  padding: 3px 0 3px 10px;
+}
+
+.modal-header span {
+  margin-left: 5px;
+}
+
+.modal-content {
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-grow: 1;
+  background: #f7f7f7;
+}
+
+.flex-container {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
